--- a/testing/infra/k8s/overlays/local/kustomization.yaml
+++ b/testing/infra/k8s/overlays/local/kustomization.yaml
@@ -21,3 +21,10 @@ patches:
                   memory: "512Mi"
                 requests:
                   memory: "150Mi"
+- patch: |-
+    apiVersion: apm.k8s.elastic.co/v1
+    kind: ApmServer
+    metadata:
+      name: apm-server
+    spec:
+      image: apm-server
