feat: support standalone APM Server with Tilt (#10516)
* feat: support standalone APM Server with Tilt

* docs: clarify new Tilt behaviour

* docs: update testing document

Co-authored-by: Andrew Wilkins <axwalk@gmail.com>

* refactor: migrate to ECK's ApmServer CRD

* feat: use overlay to replace apm-server image with local repo

* fix: update ApmServer kind to use custom image

* ci: remove deleted files from bump elastic stack ci job

* refactor: reduce diff noise

* refactor: remove trailing newlines

* refactor: always enable buildkit

Co-authored-by: Andrew Wilkins <axwalk@gmail.com>

* test: remove kibanaref from apm-server tilt yaml

* tilt: disable tls for apm-server

* refactor: remove hosts setting from apm-server yaml

Co-authored-by: Andrew Wilkins <axwalk@gmail.com>

---------

Co-authored-by: Andrew Wilkins <axwalk@gmail.com>

--- a/testing/infra/k8s/base/stack/apm-server.yaml
+++ b/testing/infra/k8s/base/stack/apm-server.yaml
@@ -1,25 +1,28 @@
-apiVersion: agent.k8s.elastic.co/v1alpha1
-kind: Agent
+apiVersion: apm.k8s.elastic.co/v1
+kind: ApmServer
 metadata:
   name: apm-server
-  namespace: default
 spec:
   version: 8.8.0-ba3f07b2-SNAPSHOT
-  mode: fleet
-  policyID: eck-apm-server
-  kibanaRef:
-    name: kibana
-  fleetServerRef:
-    name: fleet-server
-  deployment:
-    replicas: 1
-    strategy:
-      # Can be changed to "Replace" for extremely memory limited environments.
-      type: "RollingUpdate"
-    podTemplate:
-      spec:
-        containers:
-        - name: agent
+  count: 1
+  http:
+    tls:
+      selfSignedCertificate:
+        disabled: true
+  config:
+    logging:
+      level: debug
+    output:
+      elasticsearch:
+        username: admin
+        password: changeme
+  elasticsearchRef:
+    name: elasticsearch
+    namespace: default
+  podTemplate:
+    spec:
+      containers:
+        - name: apm-server
           resources:
             limits:
               cpu: 1
@@ -27,5 +30,3 @@ spec:
             requests:
               cpu: 1
               memory: "1Gi"
-        securityContext:
-          runAsUser: 0
