Add missing `agent.activation_method` mapping
Add missing agent.activation_method mapping to logs-apm.app,
metrics-apm.app, logs-apm.error and metrics-apm.internal

--- a/apmpackage/apm/data_stream/app_logs/fields/fields.yml
+++ b/apmpackage/apm/data_stream/app_logs/fields/fields.yml
@@ -1,3 +1,8 @@
+- name: agent.activation_method
+  type: keyword
+  index: false
+  description: |
+    The way the agent is installed / used.
 - name: http.request.headers
   type: object
   description: |
