--- a/systemtest/approvals/TestIntakeLog/with_timestamp_as_str.approved.json
+++ b/systemtest/approvals/TestIntakeLog/with_timestamp_as_str.approved.json
@@ -3,6 +3,7 @@
         {
             "@timestamp": "2022-09-08T21:47:29.111Z",
             "agent": {
+                "activation_method": "some_activation_method",
                 "ephemeral_id": "e71be9ac-93b0-44b9-a997-5638f6ccfc36",
                 "name": "java",
                 "version": "1.10.0"
