--- a/apmpackage/apm/data_stream/app_metrics/fields/fields.yml
+++ b/apmpackage/apm/data_stream/app_metrics/fields/fields.yml
@@ -1,3 +1,8 @@
+- name: agent.activation_method
+  type: keyword
+  index: false
+  description: |
+    The way the agent is installed / used.
 - name: kubernetes.namespace
   type: keyword
   description: |
