--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -21,3 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: 'echo "No tests required to run"'
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - run: 'echo "No lint required to run"'
