--- a/.gitignore
+++ b/.gitignore
@@ -48,4 +48,5 @@ testing/smoke/**/tf.log
 testing/smoke/**/main.tf
 !testing/smoke/main.tf
 !testing/smoke/supported-os/main.tf
+!testing/smoke/managed/main.tf
 testing/rally-cloud/build
