--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ terraform.tfvars
 testing/benchmark/.envrc
 testing/benchmark/benchmark-result.txt
 testing/smoke/**/tf.log
+testing/smoke/**/apm-server.log
 testing/smoke/**/main.tf
 !testing/smoke/main.tf
 !testing/smoke/supported-os/main.tf
